--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div data-aos="fade-left" class="flex justify-center">
                     <div class="relative">
                         <div class="w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-white shadow-xl">
-                            <img src="C:\VSC\vsc\WhatsApp Image 2025-09-15 at 13.39.52_9ae81f56.jpg" alt="Saiju Barai" class="w-full h-full object-cover">
+                            <img src="..\WhatsApp Image 2025-09-15 at 13.39.52_9ae81f56.jpg" alt="Saiju Barai" class="w-full h-full object-cover">
                         </div>
                         
                     </div>
@@ -131,7 +131,7 @@
                                     <i data-feather="book" class="text-blue-600"></i>
                                 </div>
                                 <div>
-                                    <marquee behaviour="scroll" direction="left" scrollamout="4*>
+                                    <marquee behaviour="scroll" direction="left" scrollamout="4"\>
                                         <h4 class="font-medium text-gray-800">B.Tech Computer Science and Engineering</h4>
                                     </marquee>
                                     <marquee behavior="scroll" direction="left" scrollamount="5">
