--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                                 <h4 class="font-medium text-gray-800">Email</h4>
                                 <p class="text-gray-600">
                                     <a href="mailto:22221a05d5@gmail.com" class="text-gray-800 hover:text-blue-800"> 
-                                    22221a05d5@gmail.com
+                                    saijubarai1021@gmail.com
                                     </a>
                                 </p>
                             </div>
