--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             height: 100%;
             z-index: -1;
         }
+        html {
+              scroll-behavior: smooth;
+        }
+
     </style>
 </head>
 <body class="bg-gray-50 font-sans">
@@ -54,6 +58,7 @@
                     <span class="text-xl font-bold gradient-text">Saiju Barai</span>
                 </div>
                 <div class="hidden md:flex items-center space-x-8">
+                    <a href="#home" class="text-gray-700 hover:text-blue-600 font-bold transition">Home</a>
                     <a href="#about" class="text-gray-700 hover:text-blue-600 font-bold transition">About</a>
                     <a href="#skills" class="text-gray-700 hover:text-blue-600 font-bold transition">Skills</a>
                     <a href="#projects" class="text-gray-700 hover:text-blue-600 font-bold transition">Projects</a>
@@ -72,6 +77,7 @@
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="hidden fixed inset-0 bg-white/95 backdrop-blur-md z-40 pt-20 px-4">
         <div class="flex flex-col space-y-6 text-center">
+            <a href="#home" class="text-xl text-gray-700 hover:text-blue-600 transition py-2">Home</a>
             <a href="#about" class="text-xl text-gray-700 hover:text-blue-600 transition py-2">About</a>
             <a href="#skills" class="text-xl text-gray-700 hover:text-blue-600 transition py-2">Skills</a>
             <a href="#projects" class="text-xl text-gray-700 hover:text-blue-600 transition py-2">Projects</a>
@@ -83,7 +89,7 @@
     </div>
 
     <!-- Hero Section -->
-    <section class="min-h-screen flex items-center pt-16">
+    <section id="home" class="min-h-screen flex items-center pt-16">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 py-20">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
                 <div data-aos="fade-right">
